Каникулы - небольшие правки